@@ -1,3 +1,7 @@
+2022-10-23  Markus Gans  <guru.mail@muenster.de>
+	* Queuing of mouse and keyboard inputs is now implemented with 
+	  a ring buffer
+
 2022-10-20  Markus Gans  <guru.mail@muenster.de>
 	* Speed-up code through more inline functions
 
